feat: Cria rotas e crud

--- a/LordOfRings.Web/Pages/Index.cshtml
+++ b/LordOfRings.Web/Pages/Index.cshtml
@@ -5,6 +5,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem-vindo à Forja dos Anéis</h1>
+    <p class="lead mt-4">Explore a coleção dos mais poderosos anéis da Terra-média.</p>
+    <div class="mt-4">
+        <a href="/Aneis" class="bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 inline-block">
+            Ver Anéis de Poder
+        </a>
+    </div>
 </div>
